# aquamind

./: .replit  1_Dashboard.py.bak  app.py  auth.py  data_loader.py  database.py  disease_management.py  fix_typos.py  nutrient_management.py  prediction.py  pyproject.toml  update_auth.py  utils.py  visualization.py
